<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />
    
    <item
        android:id="@+id/navigation_games"
        android:icon="@drawable/ic_games"
        android:title="@string/games" />
    
    <item
        android:id="@+id/navigation_learning"
        android:icon="@drawable/ic_learning"
        android:title="@string/learning" />
    
    <item
        android:id="@+id/navigation_music"
        android:icon="@drawable/ic_music"
        android:title="@string/music" />
    
    <item
        android:id="@+id/navigation_stories"
        android:icon="@drawable/ic_stories"
        android:title="@string/stories" />
    
</menu>